contrib/tilt/front-proxy.static.yaml
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: front-proxy
  namespace: default
spec:
  parentRefs:
  - name: eg
    namespace: envoy-gateway-system
  hostnames:
  - kcp.localhost
  rules:
  - backendRefs:
    - name: frontproxy-front-proxy
      port: 8443
      namespace: default
