contrib/tilt/shard-root.yaml
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: root
  namespace: default
spec:
  parentRefs:
  - name: eg
    namespace: envoy-gateway-system
  hostnames:
  - root.kcp.localhost
  rules:
  - backendRefs:
    - name: root-kcp
      port: 6443
      namespace: default
