contrib/tilt/shard-theseus.static.yaml
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: theseus
  namespace: default
spec:
  parentRefs:
  - name: eg
    namespace: envoy-gateway-system
  hostnames:
  - theseus.kcp.localhost
  rules:
  - backendRefs:
    - name: theseus-shard-kcp
      port: 6443
      namespace: default
